# Sluice

./: .env.sample  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
clients/python/: README.md  pyproject.toml
clients/python/sluice_client/: __init__.py
contract/: .gitignore  CHANGELOG.md  Cargo.toml  Odra.toml  README.md
demo-webhook/: package-lock.json  package.json  server.js
docker/: Caddyfile  README.md  demo-subs.json  prometheus.yml
docs/: ARCHITECTURE.md  CASPER_ECOSYSTEM_APPLICATION.md  CSPR_FANS_PITCH.md  DEMO_SCRIPT.md  DEMO_SHOOT.md  DEMO_VIDEO_SCRIPT.md  DORAHACKS_SUBMISSION.md  HMAC_VERIFY.md  HONEST_LIMITS.md  LAUNCH_THREAD.md  MCP_CLIENTS.md  ROADMAP.md  Sluice-Pitch-Deck.pptx  TESTING.md  X402_INTEGRATION.md  grafana-dashboard.json  openapi.yaml  sluice.postman_collection.json
examples/: README.md  demodex-swap-event.json  transfer-event.json  transfer-events-sample.json  treasury-inbox.json  whale-transfers.json
matcher/: Dockerfile  jest.config.js  package-lock.json  package.json  tsconfig.json
mcp/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
scripts/: demo-swap-cron.sh  demo-swap.sh  demo.sh  deploy-contract.sh  deploy-web.sh  dump-ws-sample.js  install.sh  reconcile-demo-subs.mjs  record-delivery.sh  release.sh
web/: 404.html  index.html  landing.js
(+91 files in other folders)
