[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sluice-client"
version = "0.1.0"
description = "Minimal Python client for the Sluice matcher API, on-chain event subscriptions for Casper."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sluice contributors" }]
keywords = ["casper", "blockchain", "events", "webhook", "sluice", "subscriptions"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
stream = ["websockets>=12.0"]

[project.urls]
Homepage = "https://sluice.unitynodes.com"
Repository = "https://github.com/UnityNodes/Sluice"
Documentation = "https://github.com/UnityNodes/Sluice/tree/main/clients/python"

[tool.setuptools.packages.find]
where = ["."]
include = ["sluice_client*"]
